fix align

--- a/css/extended.scss
+++ b/css/extended.scss
@@ -123,3 +123,11 @@ $baseurl: '{{ site.baseurl }}/images';
       }
     }
   }
+
+/* Text Styles */
+.right{
+     text-align: right;
+}
+.left{
+     text-align: left;
+}
